# OS_lab2

./: CMakeLists.txt  README.MD
include/: functions.h
src/: functions.cpp  main.cpp
tests/: tests.cpp
